# CS236

./: 1-10-25.md  hello.cpp  launch.json  notes.md
Class_Notes/: 1-13-25.md  1-15-25.md  1-17-25.md  1-22-25.md  1-8-25.md
lab1/: Scanner.h  Token.h  main.cpp  token
lab2/: Parser.h  Token.h  main.cpp  parser
lab3/: .gitignore  CMakeLists.txt  Relation.h  Scheme.h  Tuple.h  main.cpp
lab4/: Relation.h  Tuple.h  main.cpp
lab5/: Node.h  Predicate.h  Rule.h
project1/: CMakeLists.txt  FiniteStateMachines.h  Scanner.h  actual.txt  actual61.txt  main.cpp  project1  test1.txt  token  token_debug
project1/project1-passoff/100/: input101_copy.txt
project1/project1-tests/: run-tests.sh
project1/project1-tests/project1-tests/: out10.txt  out11.txt  out12.txt  out13.txt  out14.txt  out15.txt  out16.txt  out17.txt  out61.txt  out62.txt
project1/project1.dSYM/Contents/Resources/DWARF/: project1
project1/project1.dSYM/Contents/Resources/Relocations/aarch64/: project1.yml
project1/token_debug.dSYM/Contents/: Info.plist
project1/token_debug.dSYM/Contents/Resources/DWARF/: token_debug
project1/token_debug.dSYM/Contents/Resources/Relocations/aarch64/: token_debug.yml
project2/: .gitignore  CMakeLists.txt  DatalogProgram.h  Parameter.h  Parser.h  Predicate.h  Rule.h  Scanner.h  Token.h  actual.txt  main.cpp  parser
project2/project2.dSYM/Contents/Resources/DWARF/: project2
project2/project2.dSYM/Contents/Resources/Relocations/aarch64/: project2.yml
project3/: .gitignore  Database.h  FiniteStateMachines.h  Interpreter.h  Parser.h  Predicate.h  Relation.h  Scanner.h  Scheme.h  Tuple.h  main.cpp
project3/project3.dSYM/Contents/Resources/DWARF/: project3
project3/project3.dSYM/Contents/Resources/Relocations/aarch64/: project3.yml
project4/: .gitignore  Database.h  Interpreter.h  Relation.h  Token.h
project4/project4.dSYM/Contents/Resources/DWARF/: project4
project4/project4.dSYM/Contents/Resources/Relocations/aarch64/: project4.yml
project5/: .gitignore  Database.h  Graph.h  Interpreter.h  Node.h  Parameter.h  Parser.h  Rule.h  main.cpp
